[package]
name = "bevy_pixel_widgets"
version = "0.1.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/Kurble/bevy.git" }
pixel-widgets = "0.5.1"
zerocopy = "0.3"
anyhow = "1"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4.0"