[package]
name = "bevy_pixel_widgets"
version = "0.1.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.5"
pixel-widgets = { version = "0.7.0", default-features = false }
zerocopy = "0.3"
anyhow = "1"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4.0"
